# youtube-watch-bot

./: .pre-commit-config.yaml  README.md  conf.json  pyproject.toml
src/: main.py
